--- a/frontend/src/app/views/utils/list/list.component.html
+++ b/frontend/src/app/views/utils/list/list.component.html
@@ -1,10 +1,19 @@
 <div class="card">
-  <p-toolbar styleClass="mb-1 gap-1">
-    <ng-template pTemplate="left">
-      <app-modal [acceptNew]="acceptNew" [MyComponent]="MyComponent" header="Création {{header}}" ></app-modal>
-    </ng-template>
-  </p-toolbar>
-  <p-table
+<!--    <p-toolbar styleClass="mb-1 gap-1 d-flex justify-content-between">-->
+<!--        <ng-template pTemplate="left">-->
+            <app-modal [acceptNew]="acceptNew" [MyComponent]="MyComponent" header="Création {{header}}" class="ml-auto"></app-modal>
+<!--        </ng-template>-->
+    <div class="col-12 mb-2 lg:col-12 lg:mb-0 d-flex justify-content-end" style="display: flex; justify-content: flex-end;">
+
+        <span class="p-input-icon-right">
+            <input type="text"  pInputText placeholder="Rechercher..."/>
+            <i class="pi pi-search"></i>
+        </span>
+        </div>
+<!--    </p-toolbar>-->
+
+
+    <p-table
     [columns]="column"
     [value]="data"
     [rowHover]="true"
@@ -15,6 +24,7 @@
         <th *ngFor="let col of columns">
           {{ col.name }}
         </th>
+        <th>action</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-rowData let-columns="columns">
