appointment advanced search

--- a/frontend/src/app/views/admin/discount/discount.component.html
+++ b/frontend/src/app/views/admin/discount/discount.component.html
@@ -8,5 +8,6 @@
   header="offre Spécial"
   [updatePage]="updatePage"
   [trash]="drop"
+  [searchBar]="searchBar"
   [MyComponent]="FormDiscountComponent"
 />
