--- a/frontend/src/app/views/employe/employe-component/person-list.component.html
+++ b/frontend/src/app/views/employe/employe-component/person-list.component.html
@@ -9,6 +9,7 @@
   [acceptNew]="role=='employe'"
   [header]="role=='employe' ? 'employées' : 'clients'"
   [trash]="drop"
+  [searchBar]="searchBar"
   [updatePage]="updatePage"
   [MyComponent]="FormComponent"
 />
