--- a/frontend/src/app/views/utils/list/list.component.html
+++ b/frontend/src/app/views/utils/list/list.component.html
@@ -6,12 +6,11 @@
     <div class="col-12 mb-2 lg:col-12 lg:mb-0 d-flex justify-content-end" style="display: flex; justify-content: flex-end;">
 
         <span class="p-input-icon-right">
-            <input type="text"  pInputText placeholder="Rechercher..."/>
+            <input type="text" [(ngModel)]="text" (ngModelChange)="searchBar(text)"  pInputText placeholder="Rechercher..."/>
             <i class="pi pi-search"></i>
         </span>
         </div>
 <!--    </p-toolbar>-->
-
 
     <p-table
     [columns]="column"
