--- a/frontend/src/app/views/admin/discount/discount.component.html
+++ b/frontend/src/app/views/admin/discount/discount.component.html
@@ -9,5 +9,6 @@
   [updatePage]="updatePage"
   [trash]="drop"
   [searchBar]="searchBar"
+  [loaded]="loaded"
   [MyComponent]="FormDiscountComponent"
 />
