--- a/frontend/src/app/views/employe/employe-component/person-list.component.html
+++ b/frontend/src/app/views/employe/employe-component/person-list.component.html
@@ -10,6 +10,7 @@
   [header]="role=='employe' ? 'employées' : 'clients'"
   [trash]="drop"
   [searchBar]="searchBar"
+  [loaded]="loaded"
   [updatePage]="updatePage"
   [MyComponent]="FormComponent"
 />
