--- a/frontend/src/app/views/utils/list/list.component.html
+++ b/frontend/src/app/views/utils/list/list.component.html
@@ -13,6 +13,7 @@
 <!--    </p-toolbar>-->
 
     <p-table
+        *ngIf="loaded; else loading"
     [columns]="column"
     [value]="data"
     [rowHover]="true"
@@ -28,7 +29,7 @@
     </ng-template>
     <ng-template pTemplate="body" let-rowData let-columns="columns">
       <tr style="cursor: pointer">
-        <td *ngFor="let col of columns" (click)="onRowClick(rowData)">
+        <td  *ngFor="let col of columns" (click)="onRowClick(rowData)">
           {{ col.selector(rowData) }}
         </td>
         <td >
@@ -42,7 +43,37 @@
       </tr>
     </ng-template>
   </p-table>
-    <p-paginator  [first]="0" (onPageChange)="changePage($event)" [rowsPerPageOptions]="[5, 10, 20]" [rows]="5" [totalRecords]="totalRow" ></p-paginator>
+    <ng-template #loading>
+        <div *ngFor="let skeleton of skeletons">
+            <p-table
+                [columns]="column"
+                [value]="skeletons"
+                [rowHover]="true"
+                [tableStyle]="{ 'min-width': '50rem' }"
+            >
+                <ng-template pTemplate="header" let-columns>
+                    <tr>
+                        <th *ngFor="let col of columns">
+                            <p-skeleton width="100px"></p-skeleton>
+                        </th>
+                        <th><p-skeleton width="100px"></p-skeleton></th>
+                    </tr>
+                </ng-template>
+<!--                <ng-template pTemplate="body" let-rowData let-columns="columns">-->
+<!--                    <tr style="cursor: pointer">-->
+<!--                        <td *ngFor="let col of columns">-->
+<!--                            <p-skeleton width="100px"></p-skeleton>-->
+<!--                        </td>-->
+<!--                        <td>-->
+<!--                            <p-skeleton width="100px"></p-skeleton>-->
+<!--                        </td>-->
+<!--                    </tr>-->
+<!--                </ng-template>-->
+            </p-table>
+        </div>
+    </ng-template>
+
+    <p-paginator  *ngIf="loaded"  [first]="current_page*rows" (onPageChange)="changePage($event)" [rowsPerPageOptions]="[5, 10, 20]" [rows]="rows"  [totalRecords]="totalRow" ></p-paginator>
   <p-confirmDialog></p-confirmDialog>
 </div>
 
