--- a/frontend/src/app/views/authentification/authentification.component.html
+++ b/frontend/src/app/views/authentification/authentification.component.html
@@ -4,7 +4,7 @@
             <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
                 <div class="text-center mb-5">
                     <div class="text-900 text-3xl font-medium mb-3">Bienvenue!</div>
-                    <span class="text-600 font-medium">Connectez-vous pour continuer</span>
+                    <span class="text-600 font-medium">Connectez-vous en tant  {{role==='admin' ? 'qu\'admin' : role==='employe' ? 'qu\'employé' : 'que client'}}</span>
                 </div>
 
                 <div>
