--- a/frontend/src/app/views/customer/appointment/appointment.component.html
+++ b/frontend/src/app/views/customer/appointment/appointment.component.html
@@ -1,6 +1,8 @@
 <h2>Liste de vos rendez-vous </h2>
 <div class="card">
     <p-toggleButton [(ngModel)]="displayForm" onLabel="Fermer" offLabel="Filtrer"></p-toggleButton>
+    <br>
+    <br>
 
     <div *ngIf="displayForm">
         <form [formGroup]="form" style="margin-top: 1.5em" class="service-form">
@@ -32,13 +34,12 @@
         </form>
 
     </div>
-
-    <div class="col-12 mb-2 lg:col-12 lg:mb-0 d-flex justify-content-end" style="display: flex; justify-content: flex-end;">
-                    <span class="p-input-icon-right">
-                        <input type="text" pInputText placeholder="Rechercher..."/>
-                        <i class="pi pi-search"></i>
-                    </span>
-    </div>
+<!--    <div class="col-12 mb-2 lg:col-12 lg:mb-0 d-flex justify-content-end" style="display: flex; justify-content: flex-end;">-->
+<!--                    <span class="p-input-icon-right">-->
+<!--                        <input type="text" pInputText placeholder="Rechercher..."/>-->
+<!--                        <i class="pi pi-search"></i>-->
+<!--                    </span>-->
+<!--    </div>-->
     <p-table
         [value]="appointments"
         (onRowSelect)="showDetail()"
