--- a/frontend/src/app/views/employe/emp-appointment/emp-appointment.component.html
+++ b/frontend/src/app/views/employe/emp-appointment/emp-appointment.component.html
@@ -51,8 +51,8 @@
             <th></th>
             <th>Nom du client</th>
             <th>Date du rendez-vous</th>
-            <th>La durée de vos services</th>
-            <th>Montant total de la commission</th>
+            <th>Votre temps de travail sur ce rendez-vous</th>
+            <th>Montant total de votre commission</th>
             <th>Montant à payer</th>
         </tr>
     </ng-template>
