--- a/frontend/src/app/views/authentification/authentification.component.html
+++ b/frontend/src/app/views/authentification/authentification.component.html
@@ -22,6 +22,15 @@
                         <div *ngIf="loginValid!=null"><p-message  severity="error" text="{{loginValid}}" />
                             <br> <br><br></div>
                     <button pButton pRipple  label="Se connecter" [loading]="loading" (click)="handleSubmit()" class="w-full p-3 text-xl"></button>
+                    <br>
+                    <br>
+                    <label >Se connecter en tant que :</label>
+                    <br><br>
+                    <div class="flex align-items-center justify-content-between mb-5 gap-5">
+                        <a class="font-medium no-underline cursor-pointer" href="/?role=customer" style="color: var(--primary-color)">Client</a>
+                        <a class="font-medium no-underline  cursor-pointer" href="/?role=admin" style="color: var(--primary-color)">Admin</a>
+                        <a class="font-medium no-underline cursor-pointer" href="/?role=employe" style="color: var(--primary-color)">Employé</a>
+                    </div>
                 </div>
             </div>
         </div>
