--- a/frontend/src/app/views/admin/spent/spent-form/spent-form.component.html
+++ b/frontend/src/app/views/admin/spent/spent-form/spent-form.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="field">
         <label class="block" for="type">Type</label>
-        <p-dropdown [options]="types" [style]="{width:'100%'}" optionLabel="name" optionValue="_id" formControlName="type" ></p-dropdown>
+        <p-dropdown [options]="types" [style]="{width:'100%'}" optionLabel="name" optionValue="_id" formControlName="type" appendTo="body" ></p-dropdown>
         <small id="committee-help">Le type est requis</small>
     </div>
     <div class="field">
