--- a/frontend/src/app/views/admin/typeCost/type-cost.component.html
+++ b/frontend/src/app/views/admin/typeCost/type-cost.component.html
@@ -1,6 +1,6 @@
 <h2>Liste des types de dépense</h2>
 <div class="card">
-    <p-button label="Ajouter un service" (onClick)="showAddElement()" icon="pi pi-plus"></p-button>
+    <p-button label="Ajouter un type de dépense" (onClick)="showAddElement()" icon="pi pi-plus"></p-button>
     <div class="col-12 mb-2 lg:col-12 lg:mb-0 d-flex justify-content-end" style="display: flex; justify-content: flex-end;">
             <span class="p-input-icon-right">
                 <input type="text" [(ngModel)]="text" (ngModelChange)="searchBar()" pInputText placeholder="Rechercher..."/>
